# Agora

./: .gitignore  README.md  actions.py  agents.py  config.py  economy.py  main.py  persistence.py  pyproject.toml  visualization.py  world.py
logs/: events.jsonl
tmp/: state.json
